# pgpp

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build_and_test.py  pgpp.cpp  pgpp.h  pgpp_connection.cpp  pgpp_connection.h  pgpp_coroutines.h  pgpp_log.h  vcpkg.json
.github/workflows/: ci.yml
docs/: SPECIFICATION.md  TESTING_ROADMAP.md  usage.md
include/pgpp/: pgpp.h  pgpp_connection.h  pgpp_coroutines.h
scripts/: run_tests.sh
src/: pgpp.cpp  pgpp_connection.cpp
tests/: CMakeLists.txt
tests/common/: docker_fixture.h  integration_fixture.h  test_config.h
tests/integration/: main.cpp  test_1.0_connection.cpp  test_2.0_statements.cpp  test_3.0_execution.cpp  test_4.0_pool.cpp  test_5.0_transactions.cpp  test_6.0_raw.cpp  test_7.0_coroutines.cpp  test_connection.cpp  test_coroutines.cpp  test_execution.cpp  test_fixture.h  test_pool.cpp  test_raw.cpp  test_statements.cpp  test_transactions.cpp
tests/unit/: test_0.0_basic.cpp  test_1.0_structs.cpp  test_2.0_conversions.cpp  test_2.1_connection_string.cpp  test_3.0_pool_state.cpp  test_connection_string.cpp  test_conversions.cpp  test_pool_state.cpp  test_structs.cpp
